--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -412,7 +412,7 @@ html.video-fullscreen {
       }
     }
 
-    .sequence .path {
+    .path {
       @extend %t-copy-sub1;
       margin-top: -($baseline);
       margin-bottom: $baseline;
