--- a/lms/static/sass/base/_headings.scss
+++ b/lms/static/sass/base/_headings.scss
@@ -121,7 +121,7 @@ $headings-base-color:                       $gray-d2;
         font-weight: $headings-font-weight-normal;
         // override external modules and xblocks that use inline CSS
         text-transform: initial;
-        &.h3--discussion-module {
+        &.discussion-module-title {
             margin-bottom: 0;
             display: inline-block;
         }
