--- a/lms/static/sass/discussion/_discussion.scss
+++ b/lms/static/sass/discussion/_discussion.scss
@@ -313,7 +313,7 @@ body.discussion {
     font-size: $forum-small-font-size;
   }
 
-  .discussion-module-title {
+  .discussion-module-header {
     @include float(left);
     width: flex-grid(7);
   }
@@ -347,7 +347,7 @@ body.discussion {
   font-size: $forum-base-font-size;
   text-align: center;
 
-  &.btn.btn-brand.shown {
+  &.shown {
     background-color: $btn-default-background-color;
     color: $uxpl-primary-blue;
   }
