--- a/lms/static/sass/discussion/views/_thread.scss
+++ b/lms/static/sass/discussion/views/_thread.scss
@@ -64,6 +64,10 @@
     }
 }
 
+.comments {
+    position: relative;
+}
+
 // comments layout
 .discussion-comment {
 
@@ -80,6 +84,9 @@
 
     .comment-actions-list {
         @include float(right);
+        @include right($baseline / 2);
+        position: absolute;
+        top: 10px;
     }
 }
 
