--- a/lms/static/sass/discussion/views/_thread.scss
+++ b/lms/static/sass/discussion/views/_thread.scss
@@ -80,6 +80,9 @@
 
     .comment-actions-list {
         @include float(right);
+        @include right($baseline / 2);
+        position: absolute;
+        top: 10px;
     }
 }
 
