--- a/lms/templates/problem.html
+++ b/lms/templates/problem.html
@@ -12,6 +12,7 @@ from openedx.core.djangolib.markup import HTML
 <div class="problem-progress"></div>
 
 <div class="problem">
+  ## onsubmit is required because click on any button inside form will submit it and reload page which we don't want
   <form class='capa-problem-form' onsubmit='return false;'>
   ${ HTML(problem['html']) }
   <div class="action">
